La navbar n'est plus survolée par les composents js + animation hover navbar items

--- a/index.html
+++ b/index.html
@@ -30,19 +30,15 @@
     </div>
 
     <div class="page2 page">
-        <div class="sticky">
-            <nav>
-                <ul>
-                    <li>A PROPOS</li>
-                    <li>ALTERNANCE</li>
-                    <li>PROJETS</li>
-                    <li>VEILLE</li>
-                    <li>CONTACT</li>
-                </ul>
-            </nav>
-            <!--line that grow when page scroll-->
-            <!-- <div class="line"></div> -->
-        </div>
+        <nav>
+            <ul>
+                <li><a class="nav-a" href="">A PROPOS </a></li>
+                <li><a class="nav-a" href="">ALTERNANCE </a></li>
+                <li><a class="nav-a" href="">PROJETS </a></li>
+                <li><a class="nav-a" href="">VEILLE </a></li>
+                <li><a class="nav-a" href="">CONTACT </a></li>
+            </ul>
+        </nav>
         <div class="sous-page sous-page-apropos">
             <div data-aos="fade-right" data-aos-duration="1000" class="title apropos">
                 <h2>A PROPOS DE MOI</h2>
