--- a/index.html
+++ b/index.html
@@ -145,6 +145,56 @@
                 </div>
             </div>
         </div>
+        <div class="sous-page sous-page-alternance">
+            <div data-aos="fade-right" data-aos-duration="1000" class="title">
+                <h2 id="ALTERNANCE">ALTERNANCE</h2>
+                <hr>
+            </div>
+            <div class="alternance-flex">
+                <div class="cd2ri">
+                    <div class="cd2ri-image">
+                        <img src="images/cd2ri.png" alt="">
+                    </div>
+                    <div class="cd2ri-text-container">
+                        <div class="cd2ri-top-text">
+                            <p>Durant cette deuxième annéee en BTS SIO j’ai la chance de pouvoir éffectuer une
+                                alternance au
+                                sein de l’associastion CD2RI</p>
+                        </div>
+                        <div class="cd2ri-bottom-text">
+                            <p>CD2RI propose à ses adhérents de rejoindre un réseau de contacts professionnels répartis
+                                en
+                                France et à l'étranger. Leurs services ont été pensés pour aider les membres de la
+                                communauté à
+                                atteindre leurs objectifs de croissance économique et/ou de se réaliser
+                                professionnellement.
+                                CD2RI propose de nombreux services allant de l’aide pour les jeunes ou personnes en
+                                difficultés
+                                afin de trouvé un stage ou un emplois mais aussi la création de site internet et la mise
+                                en
+                                relation avec leur raiseau interne.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="tchilee">
+                    <div class="tchilee-image">
+                        <img src="images/tchilee.png" alt="">
+                    </div>
+                    <div class="tchilee-text-container">
+                        <div class="tchilee-top-text">
+                            <p>CD2RI possède aussi une marque nommée
+                                Tchilee qui est une agence de voyage en ligne</p>
+                        </div>
+                        <div class="tchilee-bottom-text">
+                            <p>Tchilee propose de nombreuses destinations accompagnées de plusieurs offres qui
+                                consititues des parcous différents, accompagnés et personnalisables !
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="sous-page projets">
             <div data-aos="fade-right" data-aos-duration="1000" class="title apropos">
                 <h2 id="PROJETS">PROJETS</h2>
