add React certif

--- a/index.html
+++ b/index.html
@@ -376,6 +376,14 @@
                             </a>
                         </div>
                     </div>
+                    
+                    <div data-aos="zoom-in" class="block block-certif">
+                        <div class="block-debutezReact sub-block">
+                            <a target="_blank" href="documents/certifications/Cértificat_Débutez_avec_React.pdf">
+
+                            </a>
+                        </div>
+                    </div>
 
                 </div>
 
